--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
              <li><a href="chose_country.html">Country</a></li>         
     </ul></li>
              
-         <li><a href="chose_login.html">login</a>
+         <li><a href="chose_login.html">Login</a>
             <ul>
              <li><a href ="chose_forgot_password.html">Forgot Password</a></li>
              <li><a href="chose_register.html">Register</a></li>
