--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <link href= 'style.css' rel='stylesheet'>
     <ul>
-         <li><a href="chose_properties.html">Properties</a></li>
+         <li><a href="chose_sthomp18.github.io/images/properties.jpg.jpg.html">sthomp18.github.io/images/properties.jpg.jpg</a></li>
          <li><a href="chose_territory.html">Territory</a>
                   <ul>
              <li><a href="chose_city.html">City</a></li>
