--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html>
   <link href= 'style.css' rel='stylesheet'>
     <ul>
-         <li><a href img src="chose_images/sthomp18.github.io/images/properties.jpg.jpg.html">
-           <img src= "images/sthomp18.github.io/images/properties.jpg.jpg/></a></li>
+         <li><a href><img src="images/sthomp18.github.io/images/properties.jpg.jpg/></a></li>
          
                       
          <li><a href="chose_territory.html">Territory</a>
