--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
   <link href= 'style.css' rel='stylesheet'>
     <ul>
-         <li><a href><img src="images/sthomp18.github.io/images/properties.jpg.jpg/></a></li>
+         <li><a href><img src="images/sthomp18.github.io/images/properties.jpg.jpg" 
+                          width="200px" height="40px" ALT="properties" /></a></li>
          
                       
          <li><a href="chose_territory.html">Territory</a>
