--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <link href= 'style.css' rel='stylesheet'>
     <ul>
          <li><a href><img src="images/sthomp18.github.io/images/properties.jpg.jpg" 
-                          width="200px" height="40px" ALT="properties" /></a></li>
+                          width="200" height="40" ALT="properties" /></a></li>
          
                       
          <li><a href="chose_territory.html">Territory</a>
