--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <link href= 'style.css' rel='stylesheet'>
     <ul>
-         <li><a href><img src="images/sthomp18.github.io/images/properties.jpg.jpg" 
+         <li><a href><img src="sthomp18.github.io/images/properties.jpg.jpg" 
                           width="200" height="40" ALT="properties" /></a></li>
          
                       
