--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
          <li><a href="chose_territory.html">Territory</a>
                   <ul>
              <li><a href="chose_city.html">City</a></li>
-             <li><a>State</a></li>
+             <li><a href>State</a></li>
              <li><a href="chose_country.html">Country</a></li>         
     </ul></li>
              
