--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
                           width="200" height="40" ALT="properties" /></a></li>
          
                       
-         <li><a href="chose_territory.html">Territory</a>
+         <li><a href><img src="sthomp18.github.io/images/territory-200px.jpg.jpg"
+                          width="200" height="40" ALT="territory" /></a>
                   <ul>
              <li><a href="chose_city.html">City</a></li>
              <li><a href>State</a></li>
