--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
              <li><a href="chose_country.html">Country</a></li>         
     </ul></li>
              
-         <li><a href="chose_login.html">Login</a>
+         <li><a href><img src="sthomp18.github.io/images/login-200px.jpg.jpg"
+                          width="200" height="40" ALT="login"/></a>
             <ul>
              <li><a href ="chose_forgot_password.html">Forgot Password</a></li>
              <li><a href="chose_register.html">Register</a></li>
