--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
              <li><a href ="chose_forgot_password.html">Forgot Password</a></li>
              <li><a href="chose_register.html">Register</a></li>
              </ul></li>
-         <li><a href="chose_investments.html">Investments</a>            </li>
+         <li><a href><img src="sthomp18.github.io/images/inestments-200.jpg.jpg"
+                          width="200" height="40" ALT="investments"/></a>            </li>
          <li><a href="chose_News.html">News</a></li>
     </ul>
 
