--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
          <li><a href><img src="sthomp18.github.io/images/inestments-200px.jpg.jpg"
                           width="200" height="40" ALT="investments"/></a>            </li>
          <li><a href><img src="sthomp18.github.io/images/news-200px.jpg.jpg"
-                          width="200" height="40" ATL="news"</a></li>
+                          width="200" height="40" ATL="news"/></a></li>
     </ul>
 
        <head>
