--- a/index.html
+++ b/index.html
@@ -52,6 +52,6 @@
         <h1>Realestate Locator</h1>
                      <img src= "images/Ferrari-mansion-wallpapers-myspace-wallpaper-cars-images.jpg"/> 
         
-                  <img src= "sthomp18.github.io/images/PicsArt_05-04-12.30.33.jpg.png"/>
+                  <img src= "sthomp18.github.io/images/PicsArt_05-04-12.30.33.jpg.png"/><br>
     </body>
 </html>
