--- a/index.html
+++ b/index.html
@@ -3,7 +3,14 @@
   <link href= 'style.css' rel='stylesheet'>
     <ul>
          <li><a href><img src="sthomp18.github.io/images/properties.jpg.jpg" 
-                          width="200" height="40" ALT="properties" /></a></li>
+                          width="200" height="40" ALT="properties" /></a>
+        <ul>
+             <li><a href="">Residential Real Estate</a></li>
+             <li><a href="">Retail Real Estate</a></li>
+             <li><a href="">Commercial Real Estate</a></li>
+             <li><a href="">Industrial Real Estate</a></li>
+             <li><a href="">Mixed-Use Real Estate</a></li>
+    </ul></li>
          
                       
          <li><a href><img src="sthomp18.github.io/images/territory.jpg.jpg"
