--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
          <li><a href><img src="sthomp18.github.io/images/properties.jpg.jpg" 
                           width="200" height="40" ALT="properties" /></a>
         <ul>
-             <li><a href="">Residential Real Estate</a></li>
-             <li><a href="">Retail Real Estate</a></li>
-             <li><a href="">Commercial Real Estate</a></li>
-             <li><a href="">Industrial Real Estate</a></li>
-             <li><a href="">Mixed-Use Real Estate</a></li>
+             <li><a href="https://www.facebook.com/Residential-Real-Estate-216308762297602/?modal=admin_todo_tour">Residential Real Estate</a></li>
+             <li><a href="https://www.facebook.com/Retail-Real-Estate-1647079568673023/?modal=admin_todo_tour">Retail Real Estate</a></li>
+             <li><a href="https://www.facebook.com/Commercial-Real-Estate-247507429159238/?modal=admin_todo_tour">Commercial Real Estate</a></li>
+             <li><a href="https://www.facebook.com/Industrial-Real-Estate-193687551266321/?modal=admin_todo_tour">Industrial Real Estate</a></li>
+             <li><a href="https://www.facebook.com/Mixed-Use-Real-Estate-399417783867063/?modal=admin_todo_tour">Mixed-Use Real Estate</a></li>
     </ul></li>
          
                       
