--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                           width="200" height="40" ALT="investments"/></a>
                 <ul>
                 <li><a href="https://www.schwab.com/public/schwab/client_home"/>Charles Schwab</a></li>
-                <li><a href="http://ratepro.co/?header=Compare+the+Best+Bank+Accounts+of+2018&eng=b&device=c&utm_term=bank&utm_campaign=%5BSearch%5D%20%2F%20%5BBank%5D%20-%20(Desktop)%20%20-%20%244%20CPA%20Tog_Sav&utm_source=bing&utm_medium=cpc&cid=328210307&aid=1145691365844280&network=o&kid=kwd-71605982307410:loc-4125&matchtype=e&msclkid=fed4fc8f26a2119056a1a67fbd77cbe7&utm_content=Banking%20%20-%20%20%5BMain%5D%20%5BExact%5D"/>
+                <li><a href="http://ratepro.co/?header=Compare+the+Best+Bank+Accounts+of+2018&eng=b&device=c&utm_term=bank&utm_campaign=%5BSearch%5D%20%2F%20%5BBank%5D%20-%20(Desktop)%20%20-%20%244%20CPA%20Tog_Sav&utm_source=bing&utm_medium=cpc&cid=328210307&aid=1145691365844280&network=o&kid=kwd-71605982307410:loc-4125&matchtype=e&msclkid=fed4fc8f26a2119056a1a67fbd77cbe7&utm_content=Banking%20%20-%20%20%5BMain%5D%20%5BExact%5D">
                 Set Up Bank Account</a></li>
                 </ul></li>
          
@@ -41,7 +41,7 @@
                 <li><a href="https://www.youtube.com">Youtube</a></li>
                 <li><a href="https://www.instagram.com">Instagram</a></li>
                 <li><a href="https://www.pinterest.com">Pinterest</a></li>
-                <li><a href="https://www.amazon.com/gp/product/B073SRJD46/ref=as_li_tl?ie=UTF8&tag=buffoon-20&camp=1789&creative=9325&linkCode=as2&creativeASIN=B073SRJD46&linkId=2fa44ce94757bc7007f4c92191f2f21e"/>Amazon</a></li>
+                <li><a href="https://www.amazon.com/gp/product/B073SRJD46/ref=as_li_tl?ie=UTF8&tag=buffoon-20&camp=1789&creative=9325&linkCode=as2&creativeASIN=B073SRJD46&linkId=2fa44ce94757bc7007f4c92191f2f21e">Amazon</a></li>
                 </ul></li>
     </ul>
 
