--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
                 <li><a href="https://www.instagram.com/" target="_blank">Instagram</a></li>
                 <li><a href="https://www.pinterest.com/" target="_blank">Pinterest</a></li>
                 <li><a href="https://www.amazon.com/gp/product/B073SRJD46/ref=as_li_tl?ie=UTF8&tag=buffoon-20&camp=1789&creative=9325&linkCode=as2&creativeASIN=B073SRJD46&linkId=2fa44ce94757bc7007f4c92191f2f21e/" target="_blank">Amazon</a></li>
-                </ul></li>
+                <li><a href="https://www.linkedin.com/">LinkedIn</a></li>
+           </ul></li>
               
          
                 <li><img src="sthomp18.github.io/images/inestments.jpg.jpg"
