--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
   <link href= 'style.css' rel='stylesheet'>
     <ul>
-         <li><img src="sthomp18.github.io/images/properties.jpg.jpg" 
-                          width="200" height="40" ALT="properties" />
+         <li><img src="sthomp18.github.io/images/emoji©_office-068-500x500.jpg" 
+                          width="150" height="150" ALT="books" />
         <ul>
              <li><a href="https://www.thebalancesmb.com/top-major-types-of-real-estate-property-2866989/" target="_blank">Types of Real Estate</a></li>
       </ul></li>
