--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <li><img src="sthomp18.github.io/images/emoji_celebs_148-1.jpg" 
                           width="150" height="50" ALT="books" />
         <ul>
-             <li><a href="https://www.reverbnation.com/lilcomputernerd/song/29561229-she-loves-me-she-loves-me-not/" target="_blank">LilCumputernerd.com</a></li>
+             <li><a href="https://www.reverbnation.com/lilcomputernerd" target="_blank">LilCumputernerd</a></li>
       </ul></li>
              
          <li><img src=""
