--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
          <li><img src="sthomp18.github.io/images/emoji©_clothing-157-150x150.jpg"
                           width="150" height="50" ALT="territory" />
                   <ul>
-                    <li><a href="https://amzn.to/2jIl8el/"target="_blank">Adidas</a></li>
-                    <li><a href="https://amzn.to/2I4JhGF/"target="_blank">Balenciaga</a></li>
+                    <li><a href="https://www.amazon.com/gp/product/B00PEZATPM/ref=as_li_qf_asin_il_tl?ie=UTF8&tag=buffoon-20&creative=9325&linkCode=as2&creativeASIN=B00PEZATPM&linkId=631261b3e4c8032feaaf8aa19e4bca82/"target="_blank">Adidas</a></li>
+                    <li><a href="https://www.amazon.com/gp/product/B07796NDVH/ref=as_li_qf_asin_il_tl?ie=UTF8&tag=buffoon-20&creative=9325&linkCode=as2&creativeASIN=B07796NDVH&linkId=d4a80e11caede09f2dd679a28c26a6cd/"target="_blank">Balenciaga</a></li>
                     <li><a href="https://amzn.to/2IahuEZ/"target="_blank">Jordans</a></li>
                     <li><a href="https://amzn.to/2Iai9WZ/"target="_blank">Pumas</a></li>
                     <li><a href="https://amzn.to/2jGqmY6/"target="_blank">Nike</a></li>
