--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <link href= "style.css" rel="stylesheet">
+  <link href= "sthomp18.github.io/style.css" rel="stylesheet">
     <ul>
          <li><img src="sthomp18.github.io/images/emoji©_objects-024-4.jpg"
                           width="150" height="50" ALT="investments"/>
