--- a/index.html
+++ b/index.html
@@ -94,23 +94,23 @@ width: 100%;
     position: absolute;
 }
 
-.content-carrousel figure nth-child(1) {
+.content-carrousel figure nth-child(sthomp18.github.io/images/bosses.jpg) {
     transform: rotateY(0deg) translateZ(300px);  
 }
 
-.content-carrousel figure nth-child(2) {
+.content-carrousel figure nth-child(sthomp18.github.io/images/ADIDASDP34M.jpg) {
     transform: rotateY(40deg) translateZ(300px);  
 }
 
-.content-carrousel figure nth-child(3) {
+.content-carrousel figure nth-child(sthomp18.github.io/images/th.jpg) {
     transform: rotateY(80deg) translateZ(300px);  
 }
 
-.content-carrousel figure nth-child(4) {
+.content-carrousel figure nth-child(sthomp18.github.io/images/ca09cdf5-f7ba-4e60-8fd9-39f1cf28637f_1.1f81c535db09f817a2ccadd8444b53b4.jpeg) {
     transform: rotateY(120deg) translateZ(300px);  
 }
 
-.content-carrousel figure nth-child(5) {
+.content-carrousel figure nth-child(shadow"><img src="sthomp18.github.io/images/POLMCS4.jpg) {
     transform: rotateY(160deg) translateZ(300px);  
 }
 
@@ -153,7 +153,7 @@ position: absolute;
                      <figure class = "shadow"><img src= "sthomp18.github.io/images/bosses.jpg"/></figure>
                      <figure class = "shadow"><img src="sthomp18.github.io/images/ADIDASDP34M.jpg"/></figure>
                      <figure class = "shadow"><img src="sthomp18.github.io/images/th.jpg"/></figure>
-                     <figure class = "shadow"><img src="sthomp18.github.io/images/ca09cdf5-f7ba-4e60-8fd9-39f1cf28637f_1.1f81c535db09f817a2ccadd8444b53b4.jpeg""/>
+                     <figure class = "shadow"><img src="sthomp18.github.io/images/ca09cdf5-f7ba-4e60-8fd9-39f1cf28637f_1.1f81c535db09f817a2ccadd8444b53b4.jpeg"/>
                      </figure>
                      <figure class = "shadow"><img src="sthomp18.github.io/images/POLMCS4.jpg"/></figure>
                        
