--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
              .slideshow {
 margin : 0 auto;
     padding-top: 50px;
-    height: 700px;
+    height: 200px;
     background: none;
     box-sizing: border-box;
 }
@@ -68,7 +68,7 @@ margin : 0 auto;
 .content {
 margin: auto;
     width: 190px;
-    perspective: 1000px;
+    perspective: 200px;
     position: relative;
     padding-top: 80px;
     }
@@ -95,23 +95,23 @@ width: 100%;
 }
 
 .content-carrousel figure nth-child(sthomp18.github.io/images/bosses.jpg) {
-    transform: rotateY(0deg) translateZ(300px);  
+    transform: rotateY(0deg) translateZ(100px);  
 }
 
 .content-carrousel figure nth-child(sthomp18.github.io/images/ADIDASDP34M.jpg) {
-    transform: rotateY(40deg) translateZ(300px);  
+    transform: rotateY(40deg) translateZ(100px);  
 }
 
 .content-carrousel figure nth-child(sthomp18.github.io/images/th.jpg) {
-    transform: rotateY(80deg) translateZ(300px);  
+    transform: rotateY(80deg) translateZ(100px);  
 }
 
 .content-carrousel figure nth-child(sthomp18.github.io/images/ca09cdf5-f7ba-4e60-8fd9-39f1cf28637f_1.1f81c535db09f817a2ccadd8444b53b4.jpeg) {
-    transform: rotateY(120deg) translateZ(300px);  
+    transform: rotateY(120deg) translateZ(100px);  
 }
 
 .content-carrousel figure nth-child(shadow"><img src="sthomp18.github.io/images/POLMCS4.jpg) {
-    transform: rotateY(160deg) translateZ(300px);  
+    transform: rotateY(160deg) translateZ(100px);  
 }
 
 .shadow {
@@ -122,7 +122,7 @@ position: absolute;
 
 .content-carrousel img{
     image-rendering: auto;
-    transition:all 300ms;
+    transition:all 100ms;
     width: 100%;
     height: 100%;
 }
@@ -154,12 +154,13 @@ position: absolute;
                    <section class= "slideshow">
                      <div class= "content">
                     <div class = "content-carrousel">
-                     <figure class = "shadow"><img src= "sthomp18.github.io/images/bosses.jpg"/></figure>
-                     <figure class = "shadow"><img src="sthomp18.github.io/images/ADIDASDP34M.jpg"/></figure>
-                     <figure class = "shadow"><img src="sthomp18.github.io/images/th.jpg"/></figure>
-                     <figure class = "shadow"><img src="sthomp18.github.io/images/ca09cdf5-f7ba-4e60-8fd9-39f1cf28637f_1.1f81c535db09f817a2ccadd8444b53b4.jpeg"/>
+                     <figure class = "shadow"><img src= "sthomp18.github.io/images/bosses.jpg" width="150" height="50"/></figure>
+                     <figure class = "shadow"><img src="sthomp18.github.io/images/ADIDASDP34M.jpg"width="150" height="50" /></figure>
+                     <figure class = "shadow"><img src="sthomp18.github.io/images/th.jpg" width="150" height="50" /></figure>
+                     <figure class = "shadow"><img src="sthomp18.github.io/images/ca09cdf5-f7ba-4e60-8fd9-39f1cf28637f_1.1f81c535db09f817a2ccadd8444b53b4.jpeg" 
+                                                  width="150" height="50" />
                      </figure>
-                     <figure class = "shadow"><img src="sthomp18.github.io/images/POLMCS4.jpg"/></figure>
+                     <figure class = "shadow"><img src="sthomp18.github.io/images/POLMCS4.jpg" width="150" height="50"/></figure>
                        
                        </div>
                        </div>
