--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 margin : 0 auto;
     padding-top: 50px;
     height: 700px;
-    background: none;
+    background: skyblue;
     box-sizing: border-box;
 }
     
