--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 
        </head>
     <body>
+             <h1>Drippy</h1>
                    <section class= "slideshow">
                      <div class= "content">
                     <div class = "content-carrousel">
