--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
                    <section class= "slideshow">
                      <div class= "content">
                     <div class = "content-carrousel">
-                     <figure class = "shadow"><img src= "sthomp18.github.io/images/bosses.jpg"/></figure>
-                     <figure class = "shadow"><img src="sthomp18.github.io/images/ADIDASDP34M.jpg"/></figure>
-                     <figure class = "shadow"><img src="sthomp18.github.io/images/th.jpg" /></figure>
-                     <figure class = "shadow"><img src="sthomp18.github.io/images/ca09cdf5-f7ba-4e60-8fd9-39f1cf28637f_1.1f81c535db09f817a2ccadd8444b53b4.jpeg" 
+                     <figure class = "shadow"><img src= "sthomp18.github.io/images/bosses"/></figure>
+                     <figure class = "shadow"><img src="sthomp18.github.io/images/ADIDASDP34M"/></figure>
+                     <figure class = "shadow"><img src="sthomp18.github.io/images/th" /></figure>
+                     <figure class = "shadow"><img src="sthomp18.github.io/images/ca09cdf5-f7ba-4e60-8fd9-39f1cf28637f_1.1f81c535db09f817a2ccadd8444b53b4" 
                                                   />
                      </figure>
-                     <figure class = "shadow"><img src="sthomp18.github.io/images/POLMCS4.jpg"/></figure>
+                     <figure class = "shadow"><img src="sthomp18.github.io/images/POLMCS4"/></figure>
                        
                        </div>
                        </div>
