--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
    <head>
 <title>3D image slider</title>
           <style>
-<link rel= "stylesheet" href="style.css"> 
+<link rel= "stylesheet" href="sthomp18.github.io/style.css" type="text/css" > 
 </stlye>
 
           <head/>
