--- a/index.html
+++ b/index.html
@@ -1,17 +1,23 @@
 <!DOCTYPE html>
-<html>
-   <head>
-<title>3D image slider</title>
-          <style>
-<link rel= "stylesheet" href="sthomp18.github.io/style.css" type="text/css" > 
-</stlye>
-
-          <head/>
-          <body>
-                 <section class="slideshow">
-                        <div class="content">
-                        <div class="content-carrousel">
-                               <figure class="shadow"><img src="sthomp18.github.io/images/ADIDASDP34M.jpg"></figure>
-                               <figure class="shadow"><img src="sthomp18.github.io/images/POLMCS4.jpg"></figure>
-                              <figure class="shadow"><img src="sthomp18.github.io/images/ca09cdf5-f7ba-4e60-8fd9-39f1cf28637f_1.1f81c535db09f817a2ccadd8444b53b4.jpeg"></figure>
-                              <figure class="shadow"><img src="sthomp18.github.io/images/th.jpg"></figure>
+<html lang="en">
+       <head>
+         <meta charset= "UTF-8">
+         <title>how to make 3D cube animation with image</title>
+       </head>
+  <link rel="stylesheet" href="style.css">
+    <body>
+             <div class="rotating-box">
+               <div class="single-rd">
+                 <div class="front-side">
+                 <img src="sthomp18.github.io/images/ADIDASDP34M.jpg" ALT=""/></div>
+                 <div class="back-side"><img src="sthomp18.github.io/images/POLMCS4.jpg" ALT=""/></div>
+                 <div class="left-side"><img src="sthomp18.github.io/images/ca09cdf5-f7ba-4e60-8fd9-39f1cf28637f_1.1f81c535db09f817a2ccadd8444b53b4.jpeg" ALT=""/></div>
+                 <div class="right-side"><img src="sthomp18.github.io/images/th.jpg" ATL=""/></div>
+                 <div class="top-side"></div>
+                 <div class="bottom-side"></div>
+               </div>
+             </div>         
+        
+                
+    </body>
+</html>
