--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
     <body>
              <div class="rotating-box">
                <div class="single-rd">
-                 <div class="front-side">
-                 <img src="sthomp18.github.io/images/ADIDASDP34M.jpg" ALT=""/></div>
-                 <div class="back-side"><img src="sthomp18.github.io/images/POLMCS4.jpg" ALT=""/></div>
-                 <div class="left-side"><img src="sthomp18.github.io/images/ca09cdf5-f7ba-4e60-8fd9-39f1cf28637f_1.1f81c535db09f817a2ccadd8444b53b4.jpeg" ALT=""/></div>
-                 <div class="right-side"><img src="sthomp18.github.io/images/th.jpg" ATL=""/></div>
+                 <div class="front-side"><a href="https://www.amazon.com/gp/product/B006KTHFBC/ref=as_li_tl?ie=UTF8&tag=buffoon-20&camp=1789&creative=9325&linkCode=as2&creativeASIN=B006KTHFBC&linkId=cfc90f20b668bd6a61a0d3508f9eacd1/">
+                 <img src="sthomp18.github.io/images/ADIDASDP34M.jpg" ALT=""/></a></div>
+                 <div class="back-side"><a href="https://www.amazon.com/gp/product/B0009OAGUG/ref=as_li_tl?ie=UTF8&tag=buffoon-20&camp=1789&creative=9325&linkCode=as2&creativeASIN=B0009OAGUG&linkId=f93d735edb0c4740f61744438a4a2aab/">
+                        <img src="sthomp18.github.io/images/POLMCS4.jpg" ALT=""/></a></div>
+                 <div class="left-side"><a href="https://www.amazon.com/gp/product/B000GHVK9M/ref=as_li_tl?ie=UTF8&tag=buffoon-20&camp=1789&creative=9325&linkCode=as2&creativeASIN=B000GHVK9M&linkId=269b3bca3f263d5cbcfcaed615ba200a/">
+                        <img src="sthomp18.github.io/images/ca09cdf5-f7ba-4e60-8fd9-39f1cf28637f_1.1f81c535db09f817a2ccadd8444b53b4.jpeg" ALT=""/></a></div>
+                 <div class="right-side"><a href="https://www.amazon.com/gp/product/B004O24Q8W/ref=as_li_tl?ie=UTF8&tag=buffoon-20&camp=1789&creative=9325&linkCode=as2&creativeASIN=B004O24Q8W&linkId=b2d49671507511684614f327b7ff90da/">
+                        <img src="sthomp18.github.io/images/th.jpg" ATL=""/></a></div>
                  <div class="top-side"></div>
                  <div class="bottom-side"></div>
                </div>
