--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
-<header>
-<ul>
+<link href= 'sthomp18.github.io/style.css' rel= 'stylesheet'>
+
+         <ul>
          <li><img src="sthomp18.github.io/images/emoji©_objects-024-4.jpg"
                           width="150" height="50" ALT="investments"/>
                 <ul>
@@ -43,7 +44,7 @@
          
     </ul>
 
-</header>
+<header>
 <title align= "center">Drippy</title>
            <meta name="author" content="lilcomputernerd">
            <meta name="description" content="how to make money online">
@@ -57,7 +58,7 @@
                h1         {
                                font-family: ar berkley;
                                 }
- 
+ </header>
                   <body>           
 </body>
 </html>
