--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <link href= 'sthomp18.github.io/style.css' rel= 'stylesheet'>
 
-         <ul>
+         <ul align= 'center'>
          <li><img src="sthomp18.github.io/images/emoji©_objects-024-4.jpg"
                           width="150" height="50" ALT="investments"/>
                 <ul>
