--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
                     
 </body>
 <footer>
-                    
+         <img src= "sthomp18.github.io/images/Fire-PNG-image.png" aligne-image="center"
+                    width=" 600" height="200"/>           
 </footer>
                     </html>
 
