--- a/index.html
+++ b/index.html
@@ -63,8 +63,10 @@
                     
 </body>
 <footer>
-         <img src= "sthomp18.github.io/images/Fire-PNG-image.jpg" aligne-image="center"
-                    width=" 600" height="150"/>           
+                    <div class= 'banner'>
+         <img class='banner-image' src= "sthomp18.github.io/images/Fire-PNG-image.jpg"
+                    width=" 600" height="150"/>
+                    </div>
 </footer>
                     </html>
 
