--- a/index.html
+++ b/index.html
@@ -58,9 +58,10 @@
                                 }
  </header>
                   <body> 
+                    <head>
                     <h1>drippy nation</h1>
                     
-                    
+        </head>            
 </body>
 <footer>
                     <div class= 'banner'>
