--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
                h1         {
                                font-family: ar berkley;
                                 }
-   </header> 
+   </style>
+                    </header> 
                    
                     <div>
                     <h1>drippy nation</h1>
