--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
          </ul></li>
         <li><form action="https://www.google.com/search" method="get">
                              <input type="text" name="q" placeholder="search world">
-                            <button> <input type="submit" value="google search"></button>
-                             </form></center>
+                            <button> <input type="submit" value="search"></button>
+                             </form>
               </ul></li>
          
                 
