--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
                     <li><a href="https://www.pinterest.com/" target="_blank">Pinterest</a></li>
                     <li><a href="https://twitter.com/" target="_blank">Twitter</a></li>
          </ul></li>
-        <li><form action="https://www.google.com/search" method="get">
+        <li><form action><a href="https://www.google.com/search" method="get">
                              <input type="text" name="q" placeholder="search world">
                             <button> <input type="submit" value="search"></button>
-                             </form>
+                             </a></form>
               </ul></li>
          
                 
