--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <li><a href="https://twitter.com/" target="_blank">Twitter</a></li>
          </ul></li>
         <li><form action><a href="https://www.google.com/search" method="get">
-                             <input type="text" name="q" placeholder="Drippy Nation">
+                             <input type="text" name="q" placeholder="Search">
                             <button> <input type="submit" value="Drippy Nation"></button>
                              </a></form>
               </ul></li>
