--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
          </ul></li>
         <li><form action="https://www.google.com/search/" method="get">
                              <input type="text" name="q" placeholder="Search">
-                             <input type="submit" value="Drippy Nation">
+                             <input type="submit" value="Google Search">
                              </form>
               </ul></li>
          
