--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
                     <li><a href="https://www.pinterest.com/" target="_blank">Pinterest</a></li>
                     <li><a href="https://twitter.com/" target="_blank">Twitter</a></li>
          </ul></li>
-        <li><form action="https://www.google.com/search/" method="get">
-                             <input type="text" name="q" placeholder="Search">
-                             <input type="submit" value="Google Search">
+        <li><form action="https://www.google.com/" method="get">
+                             <input type="text" name="q" placeholder="Google Search">
+                             <input type="submit" value="Search">
                              </form>
               </ul></li>
          
