--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
                               <img class = "banner-image" src= "sthomp18.github.io/images/Fire-PNG-image.jpg"
                     width= "900" height= "150" ALT='bossesrule'/>
                               </div>
-                    <p> if you want your song on this website please email solobooboo@gmail.com</p>
-                     <a href="https://www.instagram.com/lilcomputernerd/"><img src="<img src="sthomp18.github.io/images/fh.jpg" 
+                    <center><p> if you want your song on this website please email solobooboo@gmail.com</p></center>
+                     <a href="https://www.instagram.com/lilcomputernerd/"><img src="sthomp18.github.io/images/fh.jpg" 
                               height="50" width="50" ALT="instagram"></a>
 </footer>  
                     </html>
