--- a/index.html
+++ b/index.html
@@ -105,7 +105,8 @@
                               </div>
                      <a href="https://www.instagram.com/lilcomputernerd/"><img src="sthomp18.github.io/images/fh.jpg" 
                               height="50" width="50" ALT="instagram"></a>
-                     <center><p> if you want your song on this website please email solobooboo@gmail.com</p></center>
+                     <center><p> if you want your song or product featured on this website 
+                                  please email solobooboo@gmail.com</p></center>
 </footer>  
                     </html>
 
