--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                               auto; margin-right: auto;
                                 }
                     p          {
-                               font-size: 16px;
+                               font-size: 10px;
                                color: black;
                                 }
                     
@@ -106,7 +106,7 @@
                      <a href="https://www.instagram.com/lilcomputernerd/"><img src="sthomp18.github.io/images/fh.jpg" 
                               height="50" width="50" ALT="instagram"></a>
                      <center><p> if you want your song or product featured on this website 
-                                  please email solobooboo@gmail.com</p></center>
+                                  please contact me through the instagram link above</p></center>
 </footer>  
                     </html>
 
