--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
                     width= "900" height= "150" ALT='bossesrule'/>
                               </div>
                     
-                    <form action='https://google.com/search/' method='GET'>
+                   <center> <form action='https://bing.com/search/' method='GET'>
                              <input type='text' name='q' place-holder='search web'>
                              <input type='submit' value='search' target='_blank'>
-                       </form>     
+                       </form> </center>    
            <div class='banner'>
                               <img class = "banner-image" src= "sthomp18.github.io/images/Fire-PNG-image.jpg"
                     width= "900" height= "150" ALT='bossesrule'/>
