--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
                     
                    <center> <form action='https://bing.com/search/' method='GET'>
                              <input type='text' name='q' place-holder='search web'>
-                             <input type='submit' value='search' target='_blank'>
+                             <input type='submit' value='search web' target='_blank'>
+
                        </form> </center>    
            <div class='banner'>
                               <img class = "banner-image" src= "sthomp18.github.io/images/Fire-PNG-image.jpg"
