--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
                               height='50' width='50' ALT="instagram"></a>
                     
                      
-                     <center><p> if you want your song or product featured on this website 
-                                  please contact me through the instagram link above</p></center>
+                     <center><p>thankyou for visiting our site! If you want your song or product featured on this</p></center><br>
+                            <center><p>website please contact me through the instagram link above</p></center>
 </footer>  
                     </html>
 
