--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
         
          <center> <p>video of the day</p></center>
         <center> <iframe width="560" height="315" src="https://www.youtube.com/embed/cr8Wntx87FM" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></center>
-        <center><a href""><buttom autofocus="autofocus">click here for more videos</buttom></a></center>
+        <center><a href"https://sthomp18.github.io/shows/"><buttom autofocus="autofocus">
+                 click here for more videos</buttom></a></center>
            
          <div class='banner'>
                               <img class = "banner-image" src= "sthomp18.github.io/images/Fire-PNG-image.jpg"
