--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
          <center> <p>video of the day</p></center>
         <center> <iframe width="600" height="400" src="https://www.youtube.com/embed/cr8Wntx87FM" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></center>
 
-                <center><a href="https://sthomp18.github.io/shows.github.io/"><buttom autofocus="auto focus">
+                <center><a href="https://sthomp18.github.io/shows.github.io/"><buttom autofocus="auto focus" target="_blank">
                  click here for more videos</buttom></a></center>
            
        <center>  <div class='banner'>
