--- a/index.html
+++ b/index.html
@@ -121,6 +121,13 @@
                               <img class = "banner-image" src= "sthomp18.github.io/images/Fire-PNG-image.jpg"
                     width= "600" height= "100" ALT='bossesrule'/>
                               </div></center>
+         <div id='left-sidebar'>
+             <img src='sthomp18.github.io/images/plp.jpg'>     
+         </div>
+         
+         <div id='right-sidebar'>
+         <img src='sthomp18.github.io/images/Colorful-Koi-Fish-With-Flowers-Tattoo-Design-By-Rrela.jpg'>
+         </div>
 </body>
 
             <footer >
