--- a/index.html
+++ b/index.html
@@ -122,11 +122,11 @@
                     width= "600" height= "100" ALT='bossesrule'/>
                               </div></center>
          <div id='left-sidebar'>
-             <img src='sthomp18.github.io/images/plp.jpg'>     
+             <img src='sthomp18.github.io/images/plp.jpg' width='150'>     
          </div>
          
          <div id='right-sidebar'>
-         <img src='sthomp18.github.io/images/Colorful-Koi-Fish-With-Flowers-Tattoo-Design-By-Rrela.jpg'>
+         <img src='sthomp18.github.io/images/Colorful-Koi-Fish-With-Flowers-Tattoo-Design-By-Rrela.jpg' width='150'>
          </div>
 </body>
 
