--- a/index.html
+++ b/index.html
@@ -122,12 +122,17 @@
                     width= "600" height= "100" ALT='bossesrule'/>
                               </div></center>
          <div id='left-sidebar'>
-             <img src='sthomp18.github.io/images/plp.jpg' width='150'>     
+                  <div id= 'centeredimages'>
+             <img src='sthomp18.github.io/images/plp.jpg' width='150'>
+                           </div>
          </div>
          
          <div id='right-sidebar'>
+                  <div id='centeredimages'>
          <img src='sthomp18.github.io/images/Colorful-Koi-Fish-With-Flowers-Tattoo-Design-By-Rrela.jpg' width='150'>
+                           </div>
          </div>
+                  
 </body>
 
             <footer >
