--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                     
                      
                      <center><p>thankyou for visiting our site! If you want your song or product featured on this</p></center><br>
-                            <center><p>website please contact me through the instagram link above.</p></center>
+                            <center><p>website please contact me through the instagram link above</p></center>
 </footer>  
                     </html>
 
