--- a/index.html
+++ b/index.html
@@ -143,21 +143,21 @@
 </body>
 
             <footer >
-                   <script type="text/javascript">
+                  <script type="text/javascript">
 amzn_assoc_placement = "adunit0";
-amzn_assoc_search_bar = "true";
 amzn_assoc_tracking_id = "buffoon-20";
-amzn_assoc_search_bar_position = "bottom";
 amzn_assoc_ad_mode = "search";
 amzn_assoc_ad_type = "smart";
 amzn_assoc_marketplace = "amazon";
 amzn_assoc_region = "US";
-amzn_assoc_title = "Shop Related Products";
-amzn_assoc_default_search_phrase = "pendants";
+amzn_assoc_default_search_phrase = "cologne";
 amzn_assoc_default_category = "All";
-amzn_assoc_linkid = "e2615562cf8ce937a1b4bf843f0a51b9";
+amzn_assoc_linkid = "487e2b0800f56b74dd2fe3125e6d7e6b";
+amzn_assoc_search_bar = "true";
+amzn_assoc_search_bar_position = "top";
+
 </script>
-<script src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US"></script>
+<script src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US" target="_blank" ></script>
                     <center><a href= 'https://www.instagram.com/lilcomputernerd/' target="_blank">
                               <img src='sthomp18.github.io/images/fh.jpg' 
                               height='50' width='50' ALT="instagram"></a></center>
