--- a/index.html
+++ b/index.html
@@ -71,7 +71,9 @@
                     h1        {
                                 font-family: ar berkley;
                               }
-                    
+                    footer {
+                    Backgroung-image: url(sthomp18.github.io/images/gold-gld-ipsize-768x384.jpg)
+                    }
    </style>
                     
          </header> 
