--- a/index.html
+++ b/index.html
@@ -183,10 +183,10 @@ amzn_assoc_search_bar_position = "top";
                              <img src='sthomp18.github.io/images/larrybird-2.jpg' 
                               height='50' width='50' ALT="twitter"></a></center>
                              </li>
-                    
+                      <li><center><p>thankyou for visiting our site! If you want your song or product featured on this</p></center><br>
+                            <center><p>website please contact me through one of the links above</p></center></li>
                      </ul>
-                     <center><p>thankyou for visiting our site! If you want your song or product featured on this</p></center><br>
-                            <center><p>website please contact me through one of the links above</p></center>
+                 
 </footer>  
                     </html>
 
