--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
                          <li><a href="https://www.schwab.com/public/schwab/client_home/" target="_blank">Charles Schwab</a></li>
                          <li><a href="https://www.paypal.com/" target="_blank">PayPal</a></li>
                          <li><a href="https://www.stashinvest.com/" target="_blank">Stash</a></li>
+                         <li><a href='https://www.fanduel.com/?invitedby=sthomp17&cnl=da/' target='_blank'> Make Money</a></li>
                                                    
                 </ul></li>
      
